# 1st-ai-engineer

./: .gitignore
assignments/: d2-Your First AI Response.ipynb  d5-The Complete Agentic Loop: Movie Agent.ipynb  pyproject.toml
d9-life-coach/: README.md  life-coach.db  main.py  pyproject.toml
education-agent/: README.md  app.py  main.ipynb  main.py  pyproject.toml
education-agent-2/: README.md  app.py  graph.txt  image.ipynb  main.ipynb  main.py  presentation.md  pyproject.toml  voice.ipynb
education-agent-2/tests/: test_evaluation.py  test_nodes.py
education-agent/tests/: test_evaluation.py  test_nodes.py
life-coach/: README.md  life-coach.db  main.py  my-goal.txt  pyproject.toml
restaurant-bot/: README.md  main.py  models.py  requirements.txt  restaurant-bot-memory.db
restaurant-bot/my_agents/: complaints_agent.py  input_guardrail_agent.py  menu_agent.py  order_agent.py  output_guardrail_agent.py  reservation_agent.py  triage_agent.py
story-book-maker/: README.md  pyproject.toml  solution.md
story-book-maker/story_book_maker/: agent.py  prompt.py  tools.py
story-book-maker/story_book_maker/.adk/: session.db
